src/test/deca/context/invalid/print-boolean.deca
// Description : 
//	 test d'afficher un boolean
// Resultats :
//	 9:4: type of argument must be either int, float or String

{
    boolean b = true;

    println(b);
}